# MLOps

./: Justfile  README.md  init_env.sh  pyproject.toml
experiments/benchmark/: benchmark_decision_tree.py  benchmark_decision_tree_updated.py  benchmark_knn_centralized.py
notebooks/: decision_tree_visualization.ipynb  iris_knn_classification.ipynb  k_neighbors_classifier_visualization.ipynb
reml/: metrics.py
reml/benchmarking/: README.md  __init__.py  core.py  datasets.py  results.py  visualization.py
reml/linear_model/: LinearRegression.py  LogisticRegression.py  __init__.py
reml/naive_bayes/: GaussianNB.py  __init__.py
reml/neighbors/: KNeighborsClassifier.py  __init__.py
reml/preprocessing/: MinMaxScaler.py  Normalizer.py  StandardScaler.py  __init__.py
reml/spatial/: distance.py
reml/tree/: DecisionTree.py  RandomForest.py  __init__.py
reml/utils/: decorators.py  resample.py
reports/benchmarks/: KNN_benchmark_report.txt
results/benchmarks/: KNN_benchmark_20251029_230825.csv  KNN_benchmark_20251029_230825.json
tests/: test_DecisionTree.py  test_GaussianNB.py  test_KNeighborsClassifier.py  test_LinearRegression.py  test_LogisticRegression.py  test_MinMaxScaler.py  test_Normalizer.py  test_RandomForest.py  test_StandardScaler.py  test_decorator.py  test_distance.py  test_metrics.py
tests/utils/: __init__.py  check_repr.py
